implemented storing image generation
